Fix issue with age and status text wrapping on child gallery cards (#138)

--- a/public/styles/site/_component-contact-card.scss
+++ b/public/styles/site/_component-contact-card.scss
@@ -1,6 +1,6 @@
 .contact-card__details {
     font-family: 'Roboto', 'Helvetica Neue', Helvetica, Arial, 'Lucida Grande', sans-serif;
-    padding-top: 0.5em;
+    padding: 0.5em 0 0 0;
 }
 
 .contact-card__name {
@@ -10,6 +10,16 @@
     font-size: 1.4em;
     font-weight: 300;
     line-height: 1.6em;
+}
+
+.contact-card__ages,
+.contact-card__legal-status {
+    font-size: 1em;
+    line-height: 1em;
+}
+
+.contact-card__ages + .contact-card__legal-status {
+    padding-top: 0.5em;
 }
 
 .contact-card__details-divider {
